verificado cumplimiento de funcionalidad Listar productos && actualizando OpenAPI description
